<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/landingPage">

    <Button
        android:id="@+id/btn_reservations"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/reservations"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn_dashboard"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="@string/dashboard"
        android:layout_below="@+id/btn_reservations"
        android:visibility="gone"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btn_exercises"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="@string/exercises"
        android:layout_below="@+id/btn_dashboard"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btn_membership"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="@string/membership"
        android:layout_below="@+id/btn_exercises"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btn_contactus"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="@string/contactus"
        android:layout_below="@+id/btn_membership"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btn_view_users"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="View Users"
        android:layout_below="@+id/btn_contactus"
        />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="Logout"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/qr_scanner"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/qrscanner" />

        <ImageButton
            android:id="@+id/stopwatch"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/stopwatch" />
    </FrameLayout>


</RelativeLayout>