<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reservationsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
...
                android:layout_centerHorizontal="true"
                android:text="Your Reservations"
                android:textSize="30dp"
                android:onClick="ViewReservations" />

            <Button
                android:id="@+id/btn_boxing"
                android:layout_width="360dp"
                android:layout_height="170dp"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:text="Boxing"
...
