<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:id="@+id/signUpActivity">

    <EditText
        android:id="@+id/sign_up_first_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/sign_up_first_name"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:padding="4dp"
        android:background="@drawable/edittextbackground" />

    <EditText
        android:id="@+id/sign_up_last_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:hint="@string/sign_up_last_name"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:padding="4dp"
        android:background="@drawable/edittextbackground" />

    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:hint="@string/sign_up_email"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:padding="4dp"
        android:background="@drawable/edittextbackground" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:hint="@string/sign_up_password"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        android:padding="4dp"
        android:background="@drawable/edittextbackground"
        />

    <EditText
        android:id="@+id/sign_up_confirm_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/sign_up_confirm_password"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        android:padding="4dp"
        android:background="@drawable/edittextbackground"
        />

    <TextView
        android:id="@+id/sign_up_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:padding="4dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:backgroundTint="#127F8B"
        android:layout_gravity="center"
        />

</LinearLayout>